Add experimentation with threejs

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6,3 +6,11 @@ body {
 canvas {
     display: block;
 }
+
+#gameCanvas {
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;xz
+}
