--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -91,7 +91,7 @@ h1 {
     flex: 0.6;
 }
 
-.slider {
+#slider {
     /* border: 2px solid red; */
     display: flex;
     justify-content: center;
@@ -123,7 +123,7 @@ h1 {
 
 
 
-.play-button {
+#play-button {
     /* border: 2px solid blueviolet; */
     display: flex;
     flex-direction: column;
@@ -179,7 +179,7 @@ input[type=range]::active {
     align-items: center;
 }
 
-.reset-btn {
+#reset-btn {
     cursor: pointer;
 }
 
