--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -22,14 +22,10 @@ canvas {
 
 h1 {
  color: rgb(165, 156, 138);
- 
  padding: 25px;
- /* font-family: "Nunito",sans-serif; */
- font-family: "Exo",Helvetica,Arial,sans-serif;
- font-size: 26px;
- text-align: center;
- /* margin-left: 30%; */
-    
+ font: 400 20px Arial;
+ font-family:
+ text-align: center; 
 }
 
 .footer {
