--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,7 +11,7 @@ canvas {
  position: absolute; 
  z-index: 1;
  display: flex;
- justify-content: center;
+ /* justify-content: center; */
   /* margin: 0 auto; */
     position: absolute;
     left: 50%;
