--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -295,7 +295,8 @@ input[type=range]::active {
 .modal-header {
     text-align: center;
     font-weight: 400;
-    padding-top: 14px;
+    padding-top: 16px;
+    font-size: 19px;
 }
 
 /* .about-mid-thanks {
